@@ -1,6 +1,7 @@
 package com.group6.commune.Controller;
 
 import com.group6.commune.Exceptions.DataNotFoundException;
+import com.group6.commune.Exceptions.UnauthorizedAccessException;
 import com.group6.commune.Exceptions.ValidationException;
 import com.group6.commune.Model.CommunityPosts;
 import com.group6.commune.Service.CommunityPostServiceImpl;
@@ -62,19 +63,9 @@ public class PostController {
         return ResponseEntity.ok(communityPostService.deletePosts(id));
     }
 
-    @CrossOrigin(origins = "*", allowedHeaders = "*")
-    @ExceptionHandler(DataNotFoundException.class)
-    public ResponseEntity<Map<String, String>> handleDataNotFoundException(DataNotFoundException ex) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                .body(Collections.singletonMap("message", ex.getMessage()));
-    }
-
-    @CrossOrigin(origins = "*", allowedHeaders = "*")
-    @ExceptionHandler(ValidationException.class)
-    public ResponseEntity<Map<String, Object>> handleValidationException(ValidationException ex) {
-        Map<String, Object> body = new HashMap<>();
-        body.put("message", ex.getMessage());
-        body.put("errors", ex.getErrors());
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(body);
+    @ExceptionHandler(UnauthorizedAccessException.class)
+    public ResponseEntity<Map<String, Object>> handleUnauthorizedAccessException(UnauthorizedAccessException ex) {
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                .body(Map.of("message", ex.getMessage()));
     }
 }
